--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/puntWork/node#readme",
   "devDependencies": {
     "@types/ioredis": "^4.22.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
