--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Punt is a developer friendly queue for processing background jobs.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit --runInBand"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "@types/ioredis": "^4.22.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
