--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "punt-node",
   "version": "1.0.0",
   "description": "Punt is a developer friendly queue for processing background jobs.",
-  "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest --forceExit --runInBand",
     "test:watch": "jest --watch --forceExit --runInBand"
   },
@@ -22,6 +24,9 @@
     "@types/ioredis": "^4.22.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^9.1.1",
