--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
   ],
   "rules": {
     "no-console": "error",
-    "@typescript-eslint/no-unused-vars": "off",
-    "no-unused-vars": ["error", { "varsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "varsIgnorePattern": "^_" }
+    ]
   }
 }
