--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": "error",
+    "no-console": "warn",
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "varsIgnorePattern": "^_" }
