--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "punt-node",
+  "name": "@punt/node",
   "version": "1.0.0",
-  "description": "Punt is a developer friendly queue for processing background jobs.",
+  "description": "Punt is a powerful, developer friendly queue for processing background jobs.",
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .ts",
@@ -21,7 +21,8 @@
     "workers",
     "pubsub",
     "redis",
-    "streams"
+    "streams",
+    "queue"
   ],
   "author": "Andre Oliveira",
   "license": "MIT",
