--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "punt-worker": "./bin/worker"
+    "punt": "./bin/cli"
   },
   "files": [
     "dist/**/*",
@@ -52,6 +52,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "commander": "^9.4.0",
     "ioredis": "^4.25.0"
   }
 }
