--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   ],
   "homepage": "https://github.com/puntWork/node#readme",
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/ioredis": "^4.22.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.18",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "commander": "^9.4.0",
+    "debug": "^4.3.4",
     "ioredis": "^4.25.0"
   }
 }
