--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@punt/node",
-  "version": "1.2.6",
+  "version": "1.3.0-alpha.1+1",
   "description": "Punt is a powerful, developer friendly queue for processing background jobs.",
   "scripts": {
     "build": "tsc",
